add auto reloading and auto creating swagger document
